[tool.poetry]
name = "pride-bus"
version = "1.0.0"
description = "API handler for the finding the pride bus"
authors = ["TransitMatters Labs Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
requests = "2.32.0"
boto3 = "^1.34.118"
datadog_lambda = "5.94.0"
ddtrace = "2.8.5"

[tool.poetry.dev-dependencies]
pip = ">=23.3"
chalice = "1.31.1"
flake8 = "^7.0.0"
black = "^24.4.2"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"